Fix for the cookie consent script Fix for the bar on mobile (still has issues on tablet) Base styles have been changed to remove the cookie styles to a new partial

--- a/scss/_base_styles.scss
+++ b/scss/_base_styles.scss
@@ -3004,92 +3004,6 @@ body#homepage div#home-slider .homepage-slide-actions .video-know-more-icons {
   opacity: 1;
 }
 
-/* Cookie Bar */
-
-.hidden {
-  display: none;
-}
-.cookie {
-  bottom: -45px;
-}
-.cookie-wrapper {
-  font-size: 14px;
-  padding: 15px 0px 30px 0px;
-  text-align: left;
-  position: fixed;
-  background: rgba(200, 200, 200, 93%);
-  color: #ffffff;
-  width: 100%;
-  max-width: 1280px;
-  height: 50px;
-  z-index: 99;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-content: center;
-  bottom: 0;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-}
-
-.cookie-wrapper p {
-  margin-left: 50px;
-}
-
-.btn {
-  background-color: rgb(7, 76, 225);
-  border-color: rgb(7, 76, 225);
-  border-radius: 60px;
-  border-color: rgb(7, 76, 225);
-  border-width: 1px;
-  color: rgb(255, 255, 255);
-  cursor: pointer;
-  display: block;
-  float: right;
-  position: relative;
-  top: 0px;
-  font-weight: 500;
-  height: 14px;
-  letter-spacing: 0.24px;
-  line-height: normal;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  opacity: 1;
-  padding-bottom: 6px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-top: 6px;
-  text-align: center;
-  text-decoration-color: rgb(255, 255, 255);
-  text-decoration-line: none;
-  text-decoration-style: solid;
-  text-indent: 0px;
-  text-rendering: optimizelegibility;
-  text-transform: uppercase;
-  width: 100px;
-  font-size: 0.8em;
-  margin-right: 50px;
-}
-.btn:hover,
-.btn:focus {
-  color: #074ce1;
-  text-decoration: none;
-  -webkit-transition: background-position 0.1s linear;
-  -moz-transition: background-position 0.1s linear;
-  -o-transition: background-position 0.1s linear;
-  transition: background-position 0.1s linear;
-}
-.btn:hover,
-.btn:focus,
-.btn:active,
-.active.btn,
-.disabled.btn,
-[disabled].btn {
-  background-color: #fff;
-}
 
 .contain {
   object-fit: contain;
